deploy/k8s/infrastructure/network-policies/allow-rabbitmq-egress-backends.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-egress-backends
  namespace: kdvmanager-prod
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - crm-api
      - scheduling-api
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: rabbitmq
    ports:
    - protocol: TCP
      port: 5672
