deploy/k8s/infrastructure/network-policies/allow-rabbitmq-egress-scheduling.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-egress-scheduling
  namespace: kdvmanager-prod
spec:
  podSelector:
    matchLabels:
      app: scheduling-api
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: rabbitmq
    ports:
    - protocol: TCP
      port: 5672
